feat: add application

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  --br-sm: 3px;
+  --ff-sans: -apple-system,BlinkMacSystemFont,"Segoe UI Adjusted","Segoe UI","Liberation Sans",sans-serif;
+  --fs-fine: 11px;
+  --black-800: hsl(210,8%,15%);
+  --white: hsl(0,0%,100%);
+  --black-075: hsl(210,8%,90%);
+  --black-300: hsl(210,8%,65%);
+}
