feat: change option kbd styles to so

--- a/src/app/option/option.component.html
+++ b/src/app/option/option.component.html
@@ -2,7 +2,7 @@
 <fieldset>
   <legend>Choose format:</legend>
 
-  <form [formGroup]="form">
+  <form class="stackoverflow" [formGroup]="form">
     <div>
       <input type="radio" id="symbols-and-chars" formControlName="symbols" [value]="symbolsFormats.SymbolsAndCharacters"
              checked>
