update `shiftIn` label

--- a/src/app/option/option.component.html
+++ b/src/app/option/option.component.html
@@ -29,7 +29,8 @@
 
     <div>
       <input type="checkbox" formControlName="shiftIn" id="shift-in">
-      <label for="shift-in">Shift In characters (<kbd>!</kbd><kbd>@</kbd><kbd>#</kbd>…)</label>
+      <label for="shift-in">Shift number row (output <kbd>!</kbd><kbd>@</kbd><kbd>#</kbd> instead of
+        <kbd>1</kbd><kbd>2</kbd><kbd>3</kbd>)</label>
     </div>
   </form>
 </fieldset>
