--- a/src/app/option/option.component.html
+++ b/src/app/option/option.component.html
@@ -1,4 +1,4 @@
-<h2>Option</h2>
+<h2>Options</h2>
 <fieldset>
   <legend>Choose format:</legend>
 
@@ -6,11 +6,12 @@
     <div>
       <input type="radio" id="symbols-and-chars" formControlName="symbols" [value]="symbolsFormats.SymbolsAndCharacters"
              checked>
-      <label for="symbols-and-chars">Symbols and Characters (<kbd>⇧ Shift</kbd>&nbsp;<kbd>⌘ Command</kbd>&nbsp;<kbd>⌫ Delete</kbd>…)</label>
+      <label for="symbols-and-chars">Symbols and Characters (<kbd>⇧ Shift</kbd>&nbsp;<kbd>⌘ Command</kbd>&nbsp;<kbd>⌫
+          Delete</kbd>…)</label>
     </div>
 
     <div>
-      <input type="radio" id="only-chars"  formControlName="symbols" [value]="symbolsFormats.OnlyCharacters">
+      <input type="radio" id="only-chars" formControlName="symbols" [value]="symbolsFormats.OnlyCharacters">
       <label for="only-chars">Only Characters (<kbd>Shift</kbd>&nbsp;<kbd>Command</kbd>&nbsp;<kbd>Delete</kbd>…)</label>
     </div>
 
