--- a/src/app/shortcuts-render/shortcuts-render.component.html
+++ b/src/app/shortcuts-render/shortcuts-render.component.html
@@ -1,10 +1,10 @@
-<h2>Source Code</h2>
+<h2>Source code</h2>
 <div class="highlight">
   <pre><code>{{code}}</code></pre>
   <app-clipboard-copy [value]="code"></app-clipboard-copy>
 </div>
 
-<h2>Preview</h2>
+<h2>Previews</h2>
 
 <h3>Github</h3>
 
@@ -29,6 +29,3 @@
     </ng-container>
   </ng-container>
 </p>
-
-
-
