--- a/src/app/capture-area/capture-area.component.html
+++ b/src/app/capture-area/capture-area.component.html
@@ -1,1 +1,1 @@
-<p>Focus this area (click here) and press the shortcut key you want</p>
+<p>Focus this area (click here) and press the shortcut key(s) you want</p>
